--- a/tags.html
+++ b/tags.html
@@ -6,6 +6,7 @@ group: navigation
 comments: false
 ---
 {% include JB/setup %}
+{% include widgets/tagCloud.html %}
 
 <ul class="tag_box inline">
   {% assign tags_list = site.tags %}  
