--- a/tags.html
+++ b/tags.html
@@ -6,7 +6,10 @@ group: navigation
 comments: false
 ---
 {% include JB/setup %}
+
+{% assign tags_list = site.tags %}
 {% include widgets/tagCloud.html %}
+
 
 {% for tag in site.tags %} 
   <h2 id="{{ tag[0] }}-ref">{{ tag[0] }}</h2>
