--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -18,7 +18,7 @@ comments: false
 		<div class="clearfix"></div>
         <div>
 		<div class="col-sm-12">
-            <form class="form" role="form">
+            <form name="editForm" class="form" role="form">
 				<div class="row">
 					<div class="col-xs-12 col-md-4 form-group">
 						<div class="input-group">
@@ -29,11 +29,14 @@ comments: false
 					<div class="col-xs-12 col-md-8 form-group">
 						<div class="input-group">
 							<span class="input-group-addon"><span class="glyphicon glyphicon-hand-right"></span></span>
-							<input type="text" class="form-control" id="title" ng-model="options.title" placeholder="Title" />
+							<input type="text" class="form-control" id="title" ng-model="options.title" placeholder="Title" required/>
 						</div>
 					</div>
 				</div>
 			    <textarea id="target-editor" style="display:none;color:#464545;"></textarea>
+				<button ng-disabled="(editForm.$dirty && editForm.$invalid) || editForm.$pristine" ng-click="save()" class="btn btn-primary" type="button" disabled="disabled">
+					Save
+				</button>
 			</form>
 		</div>
     </div>
