--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -35,7 +35,7 @@ comments: false
 				</div>
 			    <textarea id="target-editor" style="display:none;color:#464545;"></textarea>
 				<br />
-				<button ng-disabled="(editForm.$dirty && editForm.$invalid) || editForm.$pristine" ng-click="save()" class="btn btn-primary pull-right" type="button" disabled="disabled">
+				<button ng-disabled="(editForm.$dirty && editForm.$invalid)" ng-click="save(editForm.$pristine)" class="btn btn-primary pull-right" type="button" disabled="disabled">
 					Submit
 				</button>
 				<br />
