--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -43,8 +43,8 @@ comments: false
                 </div>
                 <div class="row">
                     <h2>Frontpage</h2‚>
-                    <input type="checkbox" value="{{yaml.frontpage}}" check-list='yaml.frontpage'/>
-                    {{yaml.frontpage}}
+                    <input type="checkbox" value="{{yaml.frontpage}}" check-list='test'/>
+                    {{yaml.frontpage}} - {{test}}
                 </div>
 			    <textarea id="target-editor" style="display:none;color:#464545;"></textarea>
 				<br />
